update: cover画像をminio管理
