# src/routes/routes.rs
@@ -12,8 +12,8 @@ use utoipa_swagger_ui::SwaggerUi;
 
 use crate::service::{
     book::route::{
-        add_tag_to_book, delete_book, delete_tag_from_book, get_books, get_epub, new_book,
-        update_book,
+        add_tag_to_book, delete_book, delete_tag_from_book, get_books, get_cover_image, get_epub,
+        new_book, update_book,
     },
     invitation::route::check_invitation,
     tag::route::{delete_tag, get_tags, new_tag, update_tag},
@@ -49,7 +49,7 @@ use crate::service::{
             crate::service::user::model::LoginRequest,
             crate::service::tag::model::Tag,
             crate::service::tag::model::NewTagRequest,
-            crate::service::book::model::BookResponse,
+            crate::service::book::model::Book,
             crate::service::book::model::BookQuery,
             crate::service::book::model::Visibility,
             crate::service::book::model::UpdateBookRequest,
@@ -80,7 +80,11 @@ pub fn init_app(db: &sqlx::PgPool) -> Router {
                 .post(new_book)
                 .layer(DefaultBodyLimit::max(1024 * 1024 * 1024 * 20)),
         )
-        .route("/books/:book_id", get(get_epub).patch(update_book).delete(delete_book))
+        .route(
+            "/books/:book_id",
+            get(get_epub).patch(update_book).delete(delete_book),
+        )
+        .route("/covers/:book_id", get(get_cover_image))
         .route("/books/:book_id/tags", post(add_tag_to_book))
         .route(
             "/books/:book_id/tags/:tag_name",
